<resources>
    <string name="app_name">Listen</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">SIGN IN</string>
    <string name="sign_up_link">Don\'t have an account? Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="Email_hint">Email</string>
    <string name="SignUp_Button">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter a username, password and email.</string>
    <string name="sign_error_title">Oh No!</string>
    <string name="login_error_message"/>
    <string name="menu_logout_label">Logout</string>
    <string name="no_new_message">No new Messages</string>
    <string name="no_friends">Add friends to begin</string>
    <string name="edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="Query_error">We are sorry</string>
    <string name="error_external_storage">There was a problem accessing you device\'s external storage.</string>
    <string name="error_general">Sorry, there was an error!</string>
    <string name="video_file_size_warning">The selected video must be less than 10mb.</string>
    <string name="error_opening_media">There was a problem opening the file</string>
    <string name="error_fize_size_excess">The selected file is too large! Select a new file.</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_receipients">Choose Receipients</string>
    <string name="empty_reciepients_message">Choose some friends first!</string>
    <string name="Send">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_selecting_file_title">We are sorry!</string>
    <string name="error_sending_message">There was an error sending your message, please try again.</string>
    <string name="title_activity_view_image">Image Viewer</string>
    <string name="content_desc_background">App Background Image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button Divider</string>
</resources>
