<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_fill"
                tools:context="ivansued.com.selfdestructingmessageapp.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backgroundImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/background"
        android:scaleType="fitStart"
        android:contentDescription="@string/content_desc_background"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:hint="@string/username_hint"
        android:focusable="true"
        android:layout_above="@+id/passwordField"
        android:layout_alignLeft="@+id/backgroundImage"
        android:layout_alignStart="@+id/backgroundImage"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"
        android:layout_above="@+id/login_Button"
        android:layout_alignLeft="@+id/backgroundImage"
        android:layout_alignStart="@+id/backgroundImage"
        android:layout_marginBottom="61dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_Button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/backgroundImage"
        android:layout_alignStart="@+id/backgroundImage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_link"
        android:id="@+id/signUpTextView"
        android:layout_below="@+id/login_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/Subtitle"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:textColor="@android:color/white"/>

</RelativeLayout>
